--- a/thesis/01_introduction/01_motivation.tex
+++ b/thesis/01_introduction/01_motivation.tex
@@ -6,4 +6,4 @@ In the world of Scala, there are already few libraries made to work with the Pos
 
 In the theoretical part, we will talk about technologies used in this project like Scala, PostgreSQL and SQL parse trees. Then we will show few examples of existing Scala libraries for working with databases, their pros, cons, and how does our library fit into the whole ecosystem. We will also describe the C library, which is used to access the internal parse function of the PostgreSQL server, to get the parse tree.
 
-Then in the realization part, we will go through the implementation process. We will start with the representation of the parse tree in Scala and accessing the C library from our Scala code. Then we will talk about macros and how to use them. In the end, we combine the macros and custom interpolators to introduce type-checked queries. 
+Then in the realisation part, we will go through the implementation process. We will start with the representation of the parse tree in Scala and accessing the C library from our Scala code. Then we will talk about macros and how to use them. In the end, we combine the macros and custom interpolators to introduce type-checked queries. 
